--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -234,17 +234,19 @@ However vertical climate gradients within forests are known to be steeper than t
 Particularly in dense forests, the upper, outer canopy leaves of taller trees are exposed to dramatically different biophysical conditions than leaves in the canopy interior or understory (Figs. `r fig_NEON_vertical`, `r SIfigs_NEON_all`). 
 Accordingly, there is substantive variation across the gradient in leaf traits (this section), which in turn shape leaf temperatures and metabolism (following sections).
 
-#### *(clarify light vs height - 1  short paragraph)*
+#### *(clarify light vs height - 1 paragraph)*
 
 Our primary interest is in how leaf traits and function vary across the vertical gradient from the top of the canopy to the understory in forests.
 However, the majority of relevant research has focused on exposure gradients near ground level, with by far the most common study type being comparisons of sun and shade leaves. 
 Light based acclimation in leaf traits is well established, while research on solely height-based leaf trait variation is sparse due to the difficulty of isolating increased tree height from light. 
 While light is the primary axis along which leaf traits vary, both theory and empirical evidence indicate that other factors--for example, height on a tree or exposure to evaporative demand (Fig. `r fig_NEON_vertical`)-- are important in shaping at least a subset of traits. 
-In particular, hydraulic constraints vary with height on a tree (*Couvreur et al., 2018*; REFS).
+In particular, hydraulic constraints increase with height on a tree [REFS; *McDowell-isotopes book chapter*; @cobleLightAcclimationOptimizes2015; *Couvreur et al., 2018*], such that gas exchange is strongly constrained by at the tops of the world's tallest trees (~100 m. tall *Sequoia sempervirens*; *Ambrose et al. 2009, 2010*).
+Disentangling the influences of hydraulic constraints, light, and other biophysical drivers that vary with height (Fig. `r fig_NEON_vertical`) on leaf form and function remains an important area for research, but is beyond the scope of the current review.
+For the purposes of interpreting the results presented here, we note that patterns across light and height gradients age generally similar, at least in direction (Table 1), but likely to be modified by covarying biophysical constraints. 
 
-*(The following notes need to be condensed/ worked into the paragraph above. No need to get very specific (listing species studied, traits)--what we want is generalization. The goal is to answer the question, "Do we expect light gradients to be equivalent to height gradients, or is there variation attributable to height that is not captured by light gradients?")*
+*(The following notes need to be condensed/ worked into the paragraph above or discussion of specific traits. No need to get very specific (listing species studied, traits)--what we want is generalization. The goal is to answer the question, "Do we expect light gradients to be equivalent to height gradients, or is there variation attributable to height that is not captured by light gradients?")*
 
-*  However, studies that have measured LMA in relation to height have found that in tropical forests LMA-height predicted stronger correlation between area- based respiration versus foliar nutrients, whereas Q10 and E10 remained constant with height [Cavaleri et al. 2008]. In temperate Acer saccharum forest, within-canopy Acer saccharum exhibited greater LMA and $N area$ with height early in the growing season as a result of hydrostatic constraints on leaf morphology; however, in later growing season LMA and $N area$ continued to increase in the upper canopy due to light driven changes [@cobleLightDrivesVertical2014a; @cobleLightAcclimationOptimizes2015; @cobleHowVerticalPatterns2016].In addition, carbon isotope composition also increased with height, independent of light [@cobleLightAcclimationOptimizes2015].
+*  However, studies that have measured LMA in relation to height have found that in tropical forests LMA-height predicted stronger correlation between area- based respiration versus foliar nutrients, whereas Q10 and E10 remained constant with height [Cavaleri et al. 2008].
 
 * Height-based leaf trait variation in *Quercus alba* and *Quercus velutina* showed decrease in lobation with increased height in two tall species, suggesting an adaptation to hydraulic constraints in order to lower evapotranspiration with increasing height by decreasing lobation [@kusiPlasticLeafMorphology2020]. However, @sackHowStrongIntracanopy2006 did not observe trait variation based on height in Quercus spp.
 
@@ -264,7 +266,9 @@ However, when it comes to understanding and modeling forest ecosystem function, 
 ### Intraspecific variation
 
 **Within a species, leaf traits co-vary with their environment [@michaletzEnergeticCarbonEconomic2016] and show different degrees of foliar plasticity in accordance with the intensity and availability of light, optimizing water uptake, heat, C uptake and metabolism across forest vertical strata [@rozendaalPlasticityLeafTraits2006].**
-After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody and herbaceous species [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR, and the ratio of red to far red radiation [R:FR] intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [@casalPhotoreceptorSignalingNetworks2013]. Degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; @sackHowStrongIntracanopy2006], ultimately influencing leaf structural, chemical and physiological traits as well [@keenanGlobalLeafTrait2016]. 
+After the formation of leaves to integrated light, it takes 30-60 days for traits to stabilize in woody ~~and herbaceous~~ species [@keenanGlobalLeafTrait2016; @niinemetsLeafAgeDependent2016a]. 
+A network of sensory photoreceptors in leaves, such as phytochromes, mediate leaf-level responses to PAR and the ratio of red to far red radiation intercepting the leaf surface. This enables acclimation or avoidance responses through the development of necessary leaf traits [@casalPhotoreceptorSignalingNetworks2013]. 
+Degrees of high irradiance give rise to variation in sun-leaf traits, while degrees of low irradiance-- characterized by shade-- result in variations of shade-leaf traits [@poorterMetaanalysisPlantResponses2019b; @sackHowStrongIntracanopy2006], ultimately influencing leaf structural, chemical and physiological traits as well [@keenanGlobalLeafTrait2016]. 
 
 *(Krista: the above paragraaph is really interesting, and I like the idea of starting off the section by mentioning what controls the formation of leaf traits. However, I think it gets into more detail than needed. Also, is there work out there on how they're influenced by temperature/ water at the time of formation? I'd broaden to include the full microenviroment (without increasing length)*)
 
@@ -288,8 +292,12 @@ nocite: |
 Leaf temperature is generally assumed to increase with leaf area ($LA$) [ Wright et al. 2019; Tserej & Feeley 2021]. Yet, thermal imagery shows that though leaf area can be a predictor for leaf temperatures ranges [$Trange$] across the surface of the leaf, effective leaf width is a better predictor of leaf temperature changes and leaf thermal time constant [@leighInfluenceLeafSize2017]. With increase in effective leaf width, boundary layer thickness and resistance increases along with stomatal resistance [@leighInfluenceLeafSize2017; Wright et al. 2019; @fauset_differences_2018].This lowers evaporation from stomatal pores, and in turn transpirational cooling in large leaves [@fauset_differences_2018]. Because the rate of heat convection per unit area between leaf and air is lower for large leaves and greater for small leaves, small leaves are able to dissipate heat more efficiently than large leaves [@leighInfluenceLeafSize2017]. Using leaf energy balance to compare leaf temperatures of two species $Miconia$ and $Alchornea$, Fauset et al. 2016 found leaf width to be a dominant factor in determining changes in leaf temperature, which was evidently greater for large width leaves of $Miconia$ compared to $Alchornea$. Leaf width and characteristic dimension is generally greater in shaded leaves along the vertical gradient than exposed upper canopy [ref]. Additionally, leaf characteristics such as lobes, leaf elongation and serration, which break the entirety of leaf dimension by enhancing a smaller characteristic dimension, all facilitate more efficient heat dissipation. Leaf lobes are deeper in exposed canopy than in shaded understory, as well as leaf elongation and serration are more pronounced in sun exposed canopies [@vogelConvectiveCoolingLow1970; @schueppTansleyReviewNo1993; @sackHowStrongIntracanopy2006].
 
 
+
+ 
 #### Biochemical and physiological traits
 
+ In temperate Acer saccharum forest, within-canopy Acer saccharum exhibited greater LMA and $N area$ with height early in the growing season as a result of hydrostatic constraints on leaf morphology; however, in later growing season LMA and $N area$ continued to increase in the upper canopy due to light driven changes [@cobleLightDrivesVertical2014a; @cobleLightAcclimationOptimizes2015; @cobleHowVerticalPatterns2016].In addition, carbon isotope composition also increased with height, independent of light [@cobleLightAcclimationOptimizes2015].
+ 
 ##### *(Carotenoids/Xanthophyll cycle pigments)*
 
 High light stimulates the need for photoprotection in leaves in order to protect internal photosystem II from chronic photoinhibition through enabling D1 protein replacement. Thus, leaves exposed to greater irradiance have greater pools of xanthophyll pigments expressed on a mass or area basis--photoprotective pigments comprising of violaxanthin, antheraxanthin and zeaxanthin [$VAZ$] that convert excess light into heat energy dissipation through non photochemical quenching of excitation energy, enabling short-term acclimation to high temperature and light [@mathurPhotosyntheticEfficiencySun2018a; @niinemetsAcclimationHighIrradiance1998]. These are found to be proportional to within-canopy light gradient at an inter- and intra-species level. Therefore, $VAZ$ is lower in shaded leaves and greater in sun leaves, as observed among temperate tree species [@niinemetsAcclimationHighIrradiance1998]. In neotropical forest, foliage exposed to higher irradiance in the canopy showed greater b-carotene and vioxanthin-cycle pool on an area or chl basis compared to low light leaves that showed greater mass based chlorophyll, lutein and neoxanthin carotenoids [Mastubara et al. 2009]
